--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: Time Machine theme
 title: Kim's homepage
 description: Bookmark this to keep an eye on my project updates!
