--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: Time Machine theme
-title: Kim's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Architect theme
+description: Architect is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-architect
