--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-# Example of a minimal _config.yml
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
