--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Computational Solid State Physics]
+title: Computational Solid State Physics
 author:
-  name: [Kim, Greis]
-  email: [kimreyesg@newpaltz.edu
+  name: Kim, Greis
+  email: kimreyesg@newpaltz.edu
 
-description: [Exploring quantum materials and novel properties]
+description: Exploring quantum materials and novel properties
