--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Computational Solid State Physics
 author:
-  name: Kim, Greis
+  name: Kim Reyes, Greis
   email: kimreyesg@newpaltz.edu
 
 description: Exploring quantum materials and novel properties
