--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 remote_theme: pages-themes/minimal@v0.2.0
+logo: /assets/img/structure_spin_soft.gif
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Computational Solid State Physics
@@ -6,4 +7,4 @@ author:
   name: Kim Reyes, Greis
   email: kimreyesg@newpaltz.edu
 
-description: Exploring quantum materials and novel properties
+description: Exploring quantum materials
