--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ author:
   name: Kim Reyes, Greis
   email: kimreyesg@newpaltz.edu
 
-description: Exploring quantum materials
+description: Exploring quantum materials and novel properties.
