--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,6 @@ author:
   name: Kim Reyes, Greis
   email: kimreyesg@newpaltz.edu
 
-description: Exploring quantum materials and novel properties.
+description: Exploring quantum materials and novel properties. 
+Physics and Astronomy Department. 
+SUNY New Paltz. 
