--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ author:
   name: Kim Reyes, Greis
   email: kimreyesg@newpaltz.edu
 
-description: Exploring quantum materials at SUNY New Paltz. 
+description: Exploring Quantum Materials at SUNY New Paltz. 
