--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: pages-themes/minimal@v0.2.0
 
 # Site basics
 title: Exploring Quantum Materials at SUNY New Paltz.
-description: "Solid State and Computational Materials Science <br><br> Kim Reyes, Greis<br>Assistant Professor of Physics<br>kimreyesg@newpaltz.edu"
+description: "Hydrogenic sp2 bonding in Graphene <br><br> Kim Reyes, Greis<br>Assistant Professor of Physics<br>kimreyesg@newpaltz.edu"
 logo: /assets/img/bonding.png
 
 # Author info
