--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ title: Exploring Quantum Materials at SUNY New Paltz.
 description: "<br><br> Kim Reyes, Greis J. PhD<br>Assistant Professor of Physics<br>kimreyesg@newpaltz.edu"
 logo: scientist.png
 logo_alt: "Clearly generated with ChatGPT"
+logo_credit: "Clearly generated with ChatGPT"
+
 # Author info
 author:
   name: Kim Reyes, Greis
